--- a/_columns/The_Big_Picture/zh-cn/2024-11-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-12.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq, S&P 500 Show Resilience, But 10-Year Yield Jumps, Weighs On Small Caps	纳斯达克和标准普尔 500 指数表现出韧性，但 10 年期收益率跃升，令小盘股承压
+  Nasdaq, S&P 500 Show Resilience, But 10-Year Yield Jumps, Weighs On Small Caps
 date: 2024-11-12 17:37 -0800
 author: KEN SHREVE
 ---
@@ -10,45 +10,37 @@ author: KEN SHREVE
 
 
 
-Small caps lagged in the stock market Tuesday, but selling was well contained in the Nasdaq composite and S&P 500 ahead of a key inflation report Wednesday.  
+Small caps lagged in the stock market Tuesday, but selling was well contained in the Nasdaq composite and S&P 500 ahead of a key inflation report Wednesday.
 
 
-The Russell 2000 slumped 1.8%, but the decline didn't look too bad in light of an 8.6% gain for the small-cap index last week. Despite the loss, the Russell is still well clear of short-term support levels like the 10-day and 21-day exponential moving averages.  
+The Russell 2000 slumped 1.8%, but the decline didn't look too bad in light of an 8.6% gain for the small-cap index last week. Despite the loss, the Russell is still well clear of short-term support levels like the 10-day and 21-day exponential moving averages.
 
 
 
 
-Rising bond yields were partly responsible for the selling in the Russell 2000. The 10-year Treasury yield soared 12 basis points to 4.43%.  
+Rising bond yields were partly responsible for the selling in the Russell 2000. The 10-year Treasury yield soared 12 basis points to 4.43%.
 
 
-Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are less confident than they were about another quarter-point rate cut at the next Federal Reserve meeting in December. A month ago, those chances were 84%. Late Tuesday, they were 62%. There's a growing school of thought that the Fed won't have to cut rates as aggressively as first thought amid a stream of mostly positive economic data in recent weeks.  
+Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are less confident than they were about another quarter-point rate cut at the next Federal Reserve meeting in December. A month ago, those chances were 84%. Late Tuesday, they were 62%. There's a growing school of thought that the Fed won't have to cut rates as aggressively as first thought amid a stream of mostly positive economic data in recent weeks.
 
 
-The consumer price index is due Wednesday at 8:30 a.m. ET. On a year-over-basis, headline prices are expected to have risen 2.6% in October, up slightly from 2.4% in September. Core prices, which exclude food and energy costs, are seen rising 3.3%, unchanged from September.  
+The consumer price index is due Wednesday at 8:30 a.m. ET. On a year-over-basis, headline prices are expected to have risen 2.6% in October, up slightly from 2.4% in September. Core prices, which exclude food and energy costs, are seen rising 3.3%, unchanged from September.
 
 
-Separately, the latest reading on wholesales prices will be out Thursday, along with a speech from Fed Chair Jerome Powell at 3 p.m. ET.  
+Separately, the latest reading on wholesales prices will be out Thursday, along with a speech from Fed Chair Jerome Powell at 3 p.m. ET.
 
 
 Stock Market Today
 ------------------
 
 
-The Dow Jones Industrial Average also lagged with a loss of 0.9% and closed below the 44,000 level. The S&P 500 eased 0.3% as it wages a battle near the 6000 level. The Nasdaq composite dipped 0.1% and continues to show strength by trading tightly near highs.  
+The Dow Jones Industrial Average also lagged with a loss of 0.9% and closed below the 44,000 level. The S&P 500 eased 0.3% as it wages a battle near the 6000 level. The Nasdaq composite dipped 0.1% and continues to show strength by trading tightly near highs.
 
 
-Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq by just over 2-to-1. Breadth was worse on the NYSE at nearly 4-to-1 negative.  
+Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq by just over 2-to-1. Breadth was worse on the NYSE at nearly 4-to-1 negative.
 
 
-On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
-
-
-
-
----
-
-
-**[Stay In Sync With The Market With IBD's ETF Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)** 
+On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.
 
 
 
@@ -56,61 +48,69 @@ On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500
 ---
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP111224-218x300.jpg)The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) extended losses after Monday's sharp drop. Chip stocks lagged Monday after the Biden administration asked **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) to stop shipping advanced AI chips to China customers.  
+**[Stay In Sync With The Market With IBD's ETF Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
-To be sure, the number of stocks that have gapped up after earnings and are holdings gains post-breakout is impressive.  
 
 
-**Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)), **Garmin** ([GRMN](https://research.investors.com/quote.aspx?symbol=GRMN)), **Toast** ([TOST](https://research.investors.com/quote.aspx?symbol=TOST)) and **Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) are recent examples. There are plenty more, too. While strong gainers like these should be watched for alternate entries, they're also good examples of how extended stocks have become in short order. Extended stocks seem to be the rule, not the exception at this point.  
+---
+
+
+![](https://www.investors.com/wp-content/uploads/2024/11/MP111224-218x300.jpg)The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) extended losses after Monday's sharp drop. Chip stocks lagged Monday after the Biden administration asked **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) to stop shipping advanced AI chips to China customers.
+
+
+To be sure, the number of stocks that have gapped up after earnings and are holdings gains post-breakout is impressive.
+
+
+**Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)), **Garmin** ([GRMN](https://research.investors.com/quote.aspx?symbol=GRMN)), **Toast** ([TOST](https://research.investors.com/quote.aspx?symbol=TOST)) and **Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) are recent examples. There are plenty more, too. While strong gainers like these should be watched for alternate entries, they're also good examples of how extended stocks have become in short order. Extended stocks seem to be the rule, not the exception at this point.
 
 
 Stocks To Watch
 ---------------
 
 
-While it may seem natural to look for stocks building [bases](https://www.investors.com/ibd-university/how-to-buy/bases-overview-1/), keep in mind that the big stock market leaders started coming out weeks ago. Most stocks building bases now have lagging [relative strength lines](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/). **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) offers a good example as well as **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), a maker of aircraft components tracked in the aerospace and defense group.  
+While it may seem natural to look for stocks building [bases](https://www.investors.com/ibd-university/how-to-buy/bases-overview-1/), keep in mind that the big stock market leaders started coming out weeks ago. Most stocks building bases now have lagging [relative strength lines](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/). **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) offers a good example as well as **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), a maker of aircraft components tracked in the aerospace and defense group.
 
 
 
-Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) rose 0.7% in light volume and closed just below a 182.02 entry. Its relative strength line is also far off highs. **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) relative strength line looks closer to highs as it holds in a buy zone from a 201.20 entry.  
+Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) rose 0.7% in light volume and closed just below a 182.02 entry. Its relative strength line is also far off highs. **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) relative strength line looks closer to highs as it holds in a buy zone from a 201.20 entry.
 
 
-China stocks generally underperformed, with the Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) down 4.5%. But one name in China is still showing strength and support. Hotel operator **Atour Lifestyle** ([ATAT](https://research.investors.com/quote.aspx?symbol=ATAT)), an [IBD Sector Leader](https://research.investors.com/stock-lists/sector-leaders), is digesting recent gains well as it trades tightly just above its 10-week moving average. Shares rose 1.6%, with the company's earnings report due next week.  
+China stocks generally underperformed, with the Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) down 4.5%. But one name in China is still showing strength and support. Hotel operator **Atour Lifestyle** ([ATAT](https://research.investors.com/quote.aspx?symbol=ATAT)), an [IBD Sector Leader](https://research.investors.com/stock-lists/sector-leaders), is digesting recent gains well as it trades tightly just above its 10-week moving average. Shares rose 1.6%, with the company's earnings report due next week.
 
 
 Patience For Now
 ----------------
 
 
-Patience is a virtue for now. In the meantime, keep close tabs on your winners. If they're pulling back in light volume and finding support at key levels, there's nothing to do. But if volume starts to pick up to the downside, treat your winners with care and don't be afraid to take partial or even full profits.  
+Patience is a virtue for now. In the meantime, keep close tabs on your winners. If they're pulling back in light volume and finding support at key levels, there's nothing to do. But if volume starts to pick up to the downside, treat your winners with care and don't be afraid to take partial or even full profits.
 
 
-Stock market bulls wouldn't mind seeing an orderly, low-volume pullback from here. If it comes to fruition, it shouldn't take long for new buys to present themselves. For now, avoid chasing the big leaders that are well extended from proper entries. That's an easy way to lose money.  
+Stock market bulls wouldn't mind seeing an orderly, low-volume pullback from here. If it comes to fruition, it shouldn't take long for new buys to present themselves. For now, avoid chasing the big leaders that are well extended from proper entries. That's an easy way to lose money.
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111224.pdf) 
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111224.pdf)
 
 
-*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
+*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq) 
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
 
