--- a/_columns/The_Big_Picture/zh-cn/2024-11-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-14.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Slides Amid Powell Comments; Tesla Extends Losses	鲍威尔的评论导致股市下滑;特斯拉扩大亏损
+  Stock Market Slides Amid Powell Comments; Tesla Extends Losses
 date: 2024-11-14 17:47 -0800
 author: SCOTT LEHTONEN
 ---
@@ -10,29 +10,27 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market ended squarely lower Thursday, as Wall Street reacted to comments from Fed Chair Jerome Powell. Magnificent Seven stock **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) sold off further Thursday, on pace to end with a weekly loss.  
-周四股市收盘走低，因为华尔街对美联储主席杰罗姆鲍威尔的评论做出了反应。Magnificent Seven 股票**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 周四进一步抛售，以每周下跌结束。
+The stock market ended squarely lower Thursday, as Wall Street reacted to comments from Fed Chair Jerome Powell. Magnificent Seven stock **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) sold off further Thursday, on pace to end with a weekly loss.
 
 
-Indexes closed near session lows. The Dow Jones Industrial Average declined 0.5%, while the S&P 500 and Nasdaq composite both moved down 0.6%. The small-cap Russell 2000 index sold off 1.4%, falling sharply for a third straight session.  
-指数收于盘中低点附近。道琼斯工业平均指数下跌 0.5%，而标准普尔 500 指数和纳斯达克综合指数均下跌 0.6%。小盘股罗素 2000 指数下跌 1.4%，连续第三个交易日大幅下跌。
+Indexes closed near session lows. The Dow Jones Industrial Average declined 0.5%, while the S&P 500 and Nasdaq composite both moved down 0.6%. The small-cap Russell 2000 index sold off 1.4%, falling sharply for a third straight session.
 
 
 
 
-Volume fell on the Nasdaq and on the New York Stock Exchange from Wednesday's session. That helped the Nasdaq and S&P 500 avoid a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and left both with minor totals of higher-volume losses.  
+Volume fell on the Nasdaq and on the New York Stock Exchange from Wednesday's session. That helped the Nasdaq and S&P 500 avoid a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and left both with minor totals of higher-volume losses.
 
 
-Nine of the 11 S&P 500 sectors ended lower, with industrials and consumer discretionary leading the downside. The energy and technology sectors edged higher.  
+Nine of the 11 S&P 500 sectors ended lower, with industrials and consumer discretionary leading the downside. The energy and technology sectors edged higher.
 
 
-On Thursday afternoon, Powell said that U.S. economic strength will allow the central bank to be patient on lowering interest rates.  
+On Thursday afternoon, Powell said that U.S. economic strength will allow the central bank to be patient on lowering interest rates.
 
 
-"The economy is not sending any signals that we need to be in a hurry to lower rates," Powell said. "The strength we are currently seeing in the economy gives us the ability to approach our decisions carefully."  
+"The economy is not sending any signals that we need to be in a hurry to lower rates," Powell said. "The strength we are currently seeing in the economy gives us the ability to approach our decisions carefully."
 
 
-Bond traders [scaled back the chances for a December rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html). Odds for a quarter-point reduction fell to 62.1% from 82.5% on Wednesday. Yet the 10-year Treasury yield fell two basis points to 4.42% in late-afternoon trading.  
+Bond traders [scaled back the chances for a December rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html). Odds for a quarter-point reduction fell to 62.1% from 82.5% on Wednesday. Yet the 10-year Treasury yield fell two basis points to 4.42% in late-afternoon trading.
 
 
 
@@ -40,7 +38,7 @@ Bond traders [scaled back the chances for a December rate cut](https://www.cmegr
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/) 
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -52,16 +50,16 @@ Dow Jones Winners And Losers
 ----------------------------
 
 
-In the Dow Jones index, **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the clear winner Thursday with its jump of 6.2%. Late Wednesday, Disney reported stronger-than-expected [fiscal Q4 earnings results](https://www.investors.com/news/disney-stock-q4-2024-earnings-dow-jones/).  
+In the Dow Jones index, **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the clear winner Thursday with its jump of 6.2%. Late Wednesday, Disney reported stronger-than-expected [fiscal Q4 earnings results](https://www.investors.com/news/disney-stock-q4-2024-earnings-dow-jones/).
 
 
-On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) sold off 3% and 2.1%, respectively. Cisco [reported earnings](https://www.investors.com/news/technology/cisco-stock-cisco-earnings-news-q32024/). Salesforce remains above its recent 318.71 buy point.  
+On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) sold off 3% and 2.1%, respectively. Cisco [reported earnings](https://www.investors.com/news/technology/cisco-stock-cisco-earnings-news-q32024/). Salesforce remains above its recent 318.71 buy point.
 
 
-Most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) dropped 1.3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) moved up 0.3% to [close near its record highs](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings-preview/). And Tesla skidded nearly 6%, erasing the entirety of this week's gains.  
+Most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) dropped 1.3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) moved up 0.3% to [close near its record highs](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings-preview/). And Tesla skidded nearly 6%, erasing the entirety of this week's gains.
 
 
-Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund tumbled 3.3%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big decliners on the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), which continued to fall after Wednesday's brief spike to new highs.  
+Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund tumbled 3.3%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big decliners on the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), which continued to fall after Wednesday's brief spike to new highs.
 
 
 
@@ -69,7 +67,7 @@ Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.asp
 ---
 
 
-[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/) 
+[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/)
 
 
 
@@ -84,13 +82,13 @@ What Investors Should Do Now
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP111424-229x300.jpg)
 
 
-IBD maintained its recommended exposure level at 80%-100%.  
+IBD maintained its recommended exposure level at 80%-100%.
 
 
-As the stock market pulls back, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
+As the stock market pulls back, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, which makes sense given the session's broad-based weakness. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)).  
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, which makes sense given the session's broad-based weakness. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)).
 
 
 
@@ -98,7 +96,7 @@ As the stock market pulls back, the environment continues to require diligent [r
 ---
 
 
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/) 
+[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -110,43 +108,43 @@ Stock Market Leaders To Watch: Heico, Meta, On
 ----------------------------------------------
 
 
-Leaders to watch include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), Magnificent Seven stock Meta and retail leader **On Holdings** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)).  
+Leaders to watch include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), Magnificent Seven stock Meta and retail leader **On Holdings** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)).
 
 
 
-Aerospace leader Heico added to Wednesday's breakout move with a 1.1% rally. Shares are in buy range above a flat base's 269.38 buy point.  
+Aerospace leader Heico added to Wednesday's breakout move with a 1.1% rally. Shares are in buy range above a flat base's 269.38 buy point.
 
 
-Meta stock dipped Thursday, closing just 4% away from a 602.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) in a flat base.  
+Meta stock dipped Thursday, closing just 4% away from a 602.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) in a flat base.
 
 
-Footwear leader On Holding held above a 52.80 buy point in a flat base Thursday. The stock's RS line is approaching new highs.  
+Footwear leader On Holding held above a 52.80 buy point in a flat base Thursday. The stock's RS line is approaching new highs.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111424.pdf).  
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111424.pdf).
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.* 
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
